MODSOURCE-962 - MARC Modifications fail for Updates (#716)